stl/screen.css
/* ==========================================================================
   Table of Contents

 https://www.colourlovers.com/color/F8F7F1/Beige

 https://www.colourlovers.com/palette/3560764/Absent:_ContinuumXLS
 https://www.colourlovers.com/palette/3682353/Home
 https://www.colourlovers.com/palette/4119010/Snowstorm
   ========================================================================== */

/*

    0.  Includes
    1.  Icons
    2.  General
    2+  Other Stuff
    3.  Utilities
    4.  General
    5.  Single Post
    6.  Third Party Elements
    7.  Pagination
    8.  Footer
    9.  Media Queries (Tablet)
    10. Media Queries (Mobile)

 */

/* ==========================================================================
   0. Includes - Ground zero
   ========================================================================== */

@import url(normalize.css);


/* ==========================================================================
   1. Icons - Sets up the icon font and respective classes
   ========================================================================== */

/* Import the font file with the icons in it */
@font-face {
    font-family: 'icons';
    src:url('./icons.eot');
    src:url('./icons.eot?#iefix') format('embedded-opentype'),
        url('./icons.woff') format('woff'),
        url('./icons.ttf') format('truetype'),
        url('./icons.svg#icons') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* Apply these base styles to all icons */
.i-ghost, .icon-feed, .icon-twitter, .icon-google-plus, .icon-facebook {
    font-family: 'icons';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    text-decoration: none;
}

/* Each icon is created by inserting the corret character into the 
   content of the :before pseudo element. Like a boss. */
.i-ghost:before {
    content: "\e000";
}
.icon-feed:before {
    content: "\e001";
}
.icon-twitter:before {
    content: "\e002";
    font-size: 1.1em;
}
.icon-google-plus:before {
    content: "\e003";
}
.icon-facebook:before {
    content: "\e004";
}


/* ==========================================================================
   2. General - Setting up some base styles
   ========================================================================== */

html {
    height: 100%;
    max-height: 100%;
    font-size: 62.5%;
    overflow-x: hidden;
}

body {
    height: 100%;
    max-height: 100%;
    font-family: 'EB Garamond', serif;
    font-size: 2.0rem;
    line-height: 1.6em;
    color: #3A4145;
}
a.fa {
    text-decoration: none;
}
::-moz-selection {
    color: #222;
    background: #D6EDFF;
    text-shadow: none;
}

::selection {
    color: #222;
    background: #D6EDFF;
    text-shadow: none;
}
.left {
    float: left;
}
.right {
    float: right;
}
.clear {
    clear: both;
}
h1, h2, h3,
h4, h5, h6 {
    text-rendering: optimizeLegibility;
    line-height: 1;
    margin-top: 0;
    margin-bottom: 10px;
}
h3, h4, h5, h6 {
    text-rendering: optimizeLegibility;
    line-height: 120%;
    margin-top: 0;
    font-family: 'EB Garamond', serif;
    margin-bottom: 0%;
}

h1 {
    font-size: 5rem;
    line-height: 1.2em;
/*
    letter-spacing: -2px;
    text-indent: -3px;
*/
}

h2 {
    font-size: 4rem;
    line-height: 1.2em;
    letter-spacing: 2px;
/*
    letter-spacing: -1px;
    text-indent: -2px;
*/
}

h3 {
    font-size: 3.5rem;
}

h4 {
    font-size: 3rem;
}

h5 {
    font-size: 2.5rem;
}

h6 {
    font-size: 2.2rem;
}

a {
    color: inherit;
    text-decoration: none;
    border-bottom: 1px dotted;
    transition: all ease 0.3s;
    -webkit-transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
}

a:hover {
    color: #D13C32;
}

a.btn {
    
    text-decoration: none;
    background-color: #D13C32;
    border-radius: 6px;
    -webkit-border-radius: 6px;
    color: white;
    display: inline-block;
    font-size: 16px;
    letter-spacing: 1px;
    margin: 0;
    overflow: visible;
    padding: 10px 20px 10px 20px;
    position: relative;
    margin-top: 2rem;
    cursor: pointer;
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    font-weight: lighter;

}

a.btn:hover {
    background: #D13C32;
}

#header-arrow {
    font-size: 140px;
    margin: -10px auto;
    text-align: center;
    position: absolute;
    width: 100%;
    left: 0;
    bottom: -120px;
    cursor: pointer;
    opacity: 0.6;
    transition: all ease 0.3s;
    -webkit-transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
}
#header-arrow:hover {
    opacity: 0.9;
}

h1 a, h2 a, h3 a,
h4 a, h5 a, h6 a {
    /*color: #50585D;*/
}


p, ul, ol {
    margin: 1em 0;
}

ol ol, ul ul,
ul ol, ol ul {
    margin: 0.4em 0;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #AFCDD3;
    margin: 2em 0;
    padding: 0;
}

.subwork {
  cursor: pointer;
}

blockquote {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 1.0em 0 1.0em -2.2em;
    padding: 0 0 0 1.0em;
    /*border-left: #4a4a4a 0.4em solid;*/
    font-weight: lighter;
}

blockquote p {
    margin: 0.8em 0;
}
.quo {
    /*float: left;*/
    margin-right: 10px;
    margin-left: 10px;
    font-size: 20px;
}

blockquote small {
    display: inline-block;
    margin: 0.8em 0 0.8em 1.5em;;
    font-size:0.9em;
    color: #ccc;
}

blockquote small:before { content: '\2014 \00A0'; }

blockquote cite {
    font-weight:bold;
}

blockquote cite a { font-weight: normal; }


dl {
    margin: 1.6em 0;
}

dl dt {
    float: left;
    width: 180px;
    overflow: hidden;
    clear: left;
    text-align: right;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: bold;
    margin-bottom: 1em
}

dl dd {
    margin-left: 200px;
    margin-bottom: 1em
}

mark {
    background-color: #ffc336;
}
/* ... */

